# yapydi

./: .env  .gitignore  .pylintrc  README  README.MD  build.sh  mypy.ini  pylintrc  pyproject.toml  pytest.ini  release.sh  upload.sh  yapydi.py
src/: README.MD  demo.py
src/yapydi/: __init__.py  lib.py
tests/: injection_test.py
