[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yapydi"
version = "0.1.3"
authors = [{"email"="zoukaiping@gmail.com", "name"="Kaiping Zou"}]
description = "Yet Another Python Dependency Injection"
readme = "README.MD"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/ColinZou/yapydi"
"Source Code" = "https://github.com/ColinZou/yapydi"

